--- a/2-Intro-data-science.qmd
+++ b/2-Intro-data-science.qmd
@@ -2,7 +2,7 @@
 source("_common.R")
 ```
 
-# Foundations of Data Science and Machine Learning {#sec-ch2-intro-data-science}
+# Foundations of Data Science and the Role of Machine Learning {#sec-ch2-intro-data-science}
 
 ::: {.content-visible when-format="pdf"}
 \begin{chapterquote}
@@ -22,15 +22,15 @@ The goal is to turn data into information, and information into insight.
 ::::
 :::::
 
-How does Netflix know what you want to watch, or how can a hospital predict patient risk before symptoms appear? Behind these intelligent systems lies the power of *data science* and *machine learning*. This chapter offers your entry point into that world, even if you have never written a line of code or studied statistics before.
+How can a bank determine which customers are at risk of closing their accounts? How can we identify individuals who are likely to earn a high annual income, or households that are likely to subscribe to a term deposit? How can we group products, customers, or observations into meaningful segments when no labels are available? Questions such as these illustrate the challenge expressed in this chapter’s opening quote: the need to transform data into information, and information into insight. These practical problems lie at the heart of the data science tasks explored throughout this book. Behind such systems, whether predicting churn, classifying income, or clustering products, stand the combined strengths of data science and machine learning. This chapter offers your entry point into that world, even if you have never written a line of code or studied statistics before.
 
-Whether your background is in business, science, the humanities, or none of the above, this chapter is designed to be both accessible and practical. Through real-world examples, visual explanations, and hands-on exercises, you will explore how data science projects progress from raw data to meaningful insights, understand where machine learning fits in, and see why these tools are essential in today’s data-driven world.
+Whether your background is in business, science, the humanities, or none of the above, this chapter is designed to be both accessible and practical. Through real-world examples, visual explanations, and hands-on exercises, you will explore how data science projects progress from raw data to meaningful insights, understand where machine learning fits within that process, and see why these tools are essential in today’s data-driven world.
 
-*Data science* is a fast-moving, interdisciplinary field that integrates computational, statistical, and analytical techniques to extract insights from data. In today’s economy, data has become one of the world’s most valuable assets, often referred to as the *“new oil”*, for its power to fuel innovation and transform decision-making.
+*Data science* is a fast-moving, interdisciplinary field that integrates computational, statistical, and analytical techniques to extract insights from data. In today’s economy, data has become one of the world’s most valuable assets, often described as the *“new oil,”* for its power to fuel innovation and transform decision-making.
 
-Data science unleashes this potential by turning raw information into actionable knowledge. It draws on machine learning, programming, statistical modeling, and domain expertise to help organizations make evidence-based decisions, improve operations, anticipate trends, and build adaptive, intelligent systems. These capabilities are already transforming industries, including personalized healthcare and financial forecasting to targeted marketing and autonomous vehicles.
+Data science unleashes this potential by turning raw information into actionable knowledge. It draws on machine learning, programming, statistical modeling, and domain expertise to help organizations make evidence-based decisions, improve operations, anticipate trends, and build adaptive, intelligent systems. These capabilities are already transforming industries, from personalized healthcare and financial forecasting to targeted marketing and autonomous vehicles.
 
-As the demand for data-driven solutions continues to grow, understanding the foundations of data science, and its deep connection to machine learning, has never been more important. This chapter introduces the core concepts, explores their societal relevance, and presents a structured workflow that guides data science projects from raw data to real impact.
+As the demand for data-driven solutions continues to grow, understanding the foundations of data science, and the central role of machine learning within it, has never been more important. This chapter introduces the core concepts, explores their societal relevance, and presents a structured workflow that guides data science projects from raw data to real impact.
 
 While data science encompasses a wide variety of data types, including images, video, audio, and text, this book focuses on applications involving *structured, tabular data*. These are datasets commonly found in spreadsheets, relational databases, and logs. More complex forms of unstructured data analysis, such as computer vision or natural language processing, lie beyond the scope of this volume.
 
@@ -85,11 +85,11 @@ To build systems like these, data scientists rely on a structured, repeatable ap
 
 Have you ever tried solving a complex problem, like diagnosing a patient, optimizing a delivery route, or designing a product, without a plan? In data science, structure is everything. Without it, even the most powerful algorithms can lead to misleading or irrelevant results.
 
-That is why data science relies on a clear, organized workflow. The *data science workflow* provides a flexible yet disciplined approach to transforming messy data into actionable insights. It helps teams align their efforts, iterate thoughtfully, and ensure that results are accurate, reproducible, and useful.
+That is why data science relies on a clear, organized workflow. The data science workflow provides a flexible yet disciplined approach to transforming messy data into actionable insights. It helps teams align their efforts, iterate thoughtfully, and ensure that results are accurate, reproducible, and useful.
 
-This process is not linear—it is *iterative*. As you gain new insights, you often revisit earlier steps: redefining questions, adjusting features, or retraining models. This cyclical nature is what makes data science dynamic and adaptive.
+This process is not linear: it is iterative. As you gain new insights, you often revisit earlier steps: redefining questions, adjusting features, or retraining models. This cyclical nature is what makes data science dynamic and adaptive.
 
-A helpful way to visualize this transformation is through the *DIKW Pyramid*, which illustrates how raw *Data* becomes *Information*, then *Knowledge*, and finally *Wisdom* (see Figure [-@fig-DIKW-Pyramid]).
+A helpful way to visualize this transformation is through the DIKW Pyramid, which illustrates how raw *Data* becomes *Information*, then *Knowledge*, and finally *Wisdom* (see Figure [-@fig-DIKW-Pyramid]).
 
 ```{r fig-DIKW-Pyramid, echo = FALSE, out.width = "45%"}
 #| fig-cap: "The DIKW Pyramid illustrates the transformation of raw data into higher-order insights, progressing from data to information, knowledge, and ultimately wisdom."
@@ -97,27 +97,29 @@ A helpful way to visualize this transformation is through the *DIKW Pyramid*, wh
 knitr::include_graphics("images/ch2_DIKW-Pyramid.png")  
 ```
 
-To put this into action, we use a practical framework called *CRISP-DM* (Cross-Industry Standard Process for Data Mining). It guides data science projects through seven interconnected phases (see Figure [-@fig-ch2_DSW]):
+To put this into action, we use a practical framework called CRISP-DM (Cross-Industry Standard Process for Data Mining)[-@chapman2000crispdm]. It guides data science projects through seven interconnected phases (see Figure [-@fig-ch2_DSW]):
 
-1.  *Problem Understanding* – Define the business or research goal and clarify what success looks like.
+1. *Problem Understanding*: Define the business or research goal and clarify what success looks like.
 
-2.  *Data Preparation* – Gather, clean, and format data for analysis.
+2. *Data Preparation*: Gather, clean, and format data for analysis.
 
-3.  *Exploratory Data Analysis (EDA)* – Use summaries and visualizations to understand distributions, spot patterns, and identify potential issues.
+3. *Exploratory Data Analysis (EDA)*: Use summaries and visualizations to understand distributions, spot patterns, and identify potential issues.
 
-4.  *Data Setup to Model* – Engineer features, normalize values, and select predictors.
+4. *Data Setup to Model*: Engineer features, normalize values, and select predictors.
 
-5.  *Modeling* – Apply machine learning or statistical models to uncover patterns and generate predictions.
+5. *Modeling*: Apply machine learning or statistical models to uncover patterns and generate predictions.
 
-6.  *Evaluation* – Assess how well the model performs using appropriate metrics and validation.
+6. *Evaluation*: Assess how well the model performs using appropriate metrics and validation.
 
-7.  *Deployment* – Integrate the model into real-world systems and monitor it over time.
+7. *Deployment*: Integrate the model into real-world systems and monitor it over time.
 
 ```{r fig-ch2_DSW, echo = FALSE, out.width="85%"}
 #| fig-cap: "The Data Science Workflow is an iterative framework for structuring data science and machine learning projects. Inspired by the CRISP-DM model, it emphasizes reproducibility, continuous refinement, and impact-driven analysis."
 
 knitr::include_graphics("images/ch2_DSW.png")  
 ```
+
+A powerful illustration of this workflow in practice comes from the Harvard Study of Adult Development, one of the longest-running research projects in the social sciences. For more than eighty years, researchers have followed several generations of participants to answer a fundamental question: *What makes a good and fulfilling life?* Each new wave of data required clear problem formulation, careful planning of measurements, integration of historical and newly collected data, and exploratory and statistical analyses to uncover emerging patterns. As highlighted in [Robert Waldinger’s widely viewed TED talk](https://www.ted.com/talks/robert_waldinger_what_makes_a_good_life_lessons_from_the_longest_study_on_happiness), the study’s most robust finding is that strong, supportive relationships are among the most reliable predictors of long-term health and happiness. This example demonstrates that the value of data science lies not only in sophisticated algorithms, but in the disciplined, iterative process that connects meaningful questions with carefully prepared data and rigorous analysis. It also shows how carefully collected data, interpreted through a structured workflow, can reveal insights that are both scientifically grounded and deeply human.
 
 Because real-world data is messy, and questions evolve, this process is rarely completed in one pass. A model that performs poorly might send you back to feature engineering. A surprising pattern during EDA might reshape your original question. Embracing this iterative process is key to success in data science, and to building systems that truly make an impact.
 
@@ -127,7 +129,7 @@ In the remainder of this chapter, we walk through each stage of the Data Science
 
 ## Problem Understanding {#sec-ch2-Problem-Understanding}
 
-Every data science project begins not with code or data, but with a clearly defined question. Whether the goal is to test a scientific hypothesis, improve business operations, or enhance user experience, success depends on understanding the problem clearly and aligning it with stakeholder needs. This initial stage in the Data Science Workflow ensures that projects address meaningful goals and lay the foundation for actionable outcomes.
+Every data science project begins not with code or data, but with a clearly formulated question. A central principle in data science is that success begins with asking the right questions. A well-defined question sets the direction for the entire workflow: it clarifies the objectives, identifies the information required, and shapes how results will be interpreted. Whether the aim is to test a scientific hypothesis, improve business operations, or enhance user experience, progress depends on understanding the problem precisely and aligning it with stakeholder needs. This first stage of the Data Science Workflow ensures that projects address meaningful goals and provides the foundation for analyses that lead to actionable outcomes.
 
 A well-known example from World War II illustrates the importance of framing problems effectively: the case of [Abraham Wald](https://en.wikipedia.org/wiki/Abraham_Wald) and the missing bullet holes. During the war, the U.S. military analyzed returning aircraft to determine which areas were most damaged. Bullet holes appeared mostly on the fuselage and wings, but few were found in the engines. Figure [-@fig-case-WW2-plane] illustrates this pattern, summarized in Table [-@tbl-WW2-bullet-holes].
 
