--- a/packages.bib
+++ b/packages.bib
@@ -71,6 +71,15 @@
   url = {http://www.sthda.com/english/wiki/ggcorrplot-visualization-of-a-correlation-matrix-using-ggplot2},
 }
 
+@Manual{R-ggExtra,
+  title = {ggExtra: Add Marginal Histograms to ggplot2, and More ggplot2
+Enhancements},
+  author = {Dean Attali and Christopher Baker},
+  year = {2025},
+  note = {R package version 0.11.0},
+  url = {https://github.com/daattali/ggExtra},
+}
+
 @Manual{R-ggplot2,
   title = {ggplot2: Create Elegant Data Visualisations Using the Grammar of Graphics},
   author = {Hadley Wickham and Winston Chang and Lionel Henry and Thomas Lin Pedersen and Kohske Takahashi and Claus Wilke and Kara Woo and Hiroaki Yutani and Dewey Dunnington and Teun {van den Brand}},
