--- a/references.bib
+++ b/references.bib
@@ -1,3 +1,12 @@
+@techreport{chapman2000crispdm,
+  title        = {CRISP-DM 1.0: Step-by-step data mining guide},
+  author       = {Chapman, Pete and Clinton, Julian and Kerber, Randy and Khabaza, Thomas and Reinartz, Thomas and Shearer, Colin and Wirth, R{\"u}diger},
+  year         = {2000},
+  institution  = {SPSS},
+  address      = {Chicago, USA}
+}
+
+
 @book{bischl2024applied,
   title={Applied machine learning using mlr3 in R},
   author={Bischl, Bernd and Sonabend, Raphael and Kotthoff, Lars and Lang, Michel},
