--- a/4-Exploratory-data-analysis.qmd
+++ b/4-Exploratory-data-analysis.qmd
@@ -738,9 +738,42 @@ ggMarginal(scatter_plot, type = "histogram", groupColour = TRUE,
            groupFill = TRUE, alpha = 0.6, size = 4)
 ```
 
-The central scatter plot shows a clear positive association: customers who spend more also tend to make more transactions. Most observations fall within a broad diagonal region of moderate spending and transaction counts, where churners and non-churners largely overlap. The marginal histograms at the top and right of the figure summarise the distributions of `transaction.amount.12` and `transaction.count.12` separately, and they provide a quick visual comparison of usage levels between churned and active accounts.
+The central scatter plot shows a clear positive association: customers who spend more also tend to make more transactions. Most observations fall within a broad diagonal region of moderate spending and transaction counts, where churners and non-churners largely overlap. The marginal histograms summarise the distributions of `transaction.amount.12` and `transaction.count.12` separately, offering a quick comparison of usage patterns between churned and active accounts.
 
-> *Try it yourself:* Replace `type = "histogram"` with `type = "density"` in the `ggMarginal()` function to add marginal density curves instead of histograms. Compare the two versions and consider which one better highlights the distribution of each variable.
+> *Try it yourself:* Replace `type = "histogram"` with `type = "density"` in the `ggMarginal()` function to add marginal density curves instead of histograms. Then repeat the scatter plot using `ratio.amount.Q4.Q1` on the horizontal axis instead of `transaction.amount.12`. Compare the resulting plots: which combination of visualisation type and variables makes differences between churners and non-churners easier to see?
+
+> *Optional exploration:* You may also wish to explore a 3D perspective on these variables. The **plotly** package allows interactive rotation and zooming, which can reveal patterns that may be harder to detect in two-dimensional graphics. The following code produces a 3D scatter plot in HTML output or in your editor (such as RStudio), but it will not render in the PDF version of this book:
+
+```r
+library(plotly)
+
+plot_ly(
+  data = churnCredit,
+  x = ~transaction.amount.12,
+  y = ~transaction.count.12,
+  z = ~credit.limit,
+  color = ~churn,
+  type = "scatter3d",
+  mode = "markers",
+  marker = list(size = 2)
+)
+```
+
+```{r, eval = knitr::is_html_output(), echo = FALSE}
+library(plotly)
+
+plot_ly(
+  data = churnCredit,
+  x = ~transaction.amount.12,
+  y = ~transaction.count.12,
+  z = ~credit.limit,
+  color = ~churn,
+  colors = c("#F4A582", "#A8D5BA"),
+  type = "scatter3d",
+  mode = "markers",
+  marker = list(size = 1)
+)
+```
 
 To examine specific patterns more closely, we focus on two illustrative regions: customers with very low spending and those with moderate spending but relatively few transactions. These regions are extracted using the `subset()` function as follows:
 
