--- a/packages.bib
+++ b/packages.bib
@@ -176,6 +176,14 @@ Enhancements},
   url = {https://patchwork.data-imaginist.com},
 }
 
+@Manual{R-plotly,
+  title = {plotly: Create Interactive Web Graphics via plotly.js},
+  author = {Carson Sievert and Chris Parmer and Toby Hocking and Scott Chamberlain and Karthik Ram and Marianne Corvellec and Pedro Despouy},
+  year = {2025},
+  note = {R package version 4.11.0},
+  url = {https://plotly-r.com},
+}
+
 @Manual{R-plyr,
   title = {plyr: Tools for Splitting, Applying and Combining Data},
   author = {Hadley Wickham},
@@ -318,6 +326,15 @@ Regression},
   number = {7},
   pages = {1--31},
   doi = {10.18637/jss.v105.i07},
+}
+
+@Book{plotly2020,
+  author = {Carson Sievert},
+  title = {Interactive Web-Based Data Visualization with R, plotly, and shiny},
+  publisher = {Chapman and Hall/CRC},
+  year = {2020},
+  isbn = {9781138331457},
+  url = {https://plotly-r.com},
 }
 
 @Article{plyr2011,
