--- a/4-Exploratory-data-analysis.qmd
+++ b/4-Exploratory-data-analysis.qmd
@@ -729,7 +729,7 @@ library(ggExtra)
 # Base scatter plot
 scatter_plot <- ggplot(data = churnCredit) +
   geom_point(aes(x = transaction.amount.12, y = transaction.count.12, 
-                 color = churn), size = 0.2, alpha = 0.7) +
+                 color = churn), size = 0.1, alpha = 0.7) +
   labs(x = "Transaction Amount", y = "Total Transaction Count (12 months)") +
   theme(legend.position = "bottom")
 
@@ -759,7 +759,7 @@ plot_ly(
 )
 ```
 
-```{r, eval = knitr::is_html_output(), echo = FALSE}
+```{r, eval = knitr::is_html_output(), echo = FALSE, out.width = "100%", fig.align  = 'right'}
 library(plotly)
 
 plot_ly(
